--- a/Pharma.UnitTest/Pharma.UnitTest.csproj
+++ b/Pharma.UnitTest/Pharma.UnitTest.csproj
@@ -99,6 +99,22 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Pharma.Common\Pharma.Common.csproj">
+      <Project>{22434dd9-279b-4d99-a85c-62079a4ce48f}</Project>
+      <Name>Pharma.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Pharma.Data\Pharma.Data.csproj">
+      <Project>{d10a8e97-f077-4250-b3af-cb7a3a88921c}</Project>
+      <Name>Pharma.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Pharma.Model\Pharma.Model.csproj">
+      <Project>{cba670e7-2a39-4be3-b4ab-e1f207ea7073}</Project>
+      <Name>Pharma.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Pharma.Service\Pharma.Service.csproj">
+      <Project>{15750442-b736-44db-89e7-4e4a521cc05a}</Project>
+      <Name>Pharma.Service</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Pharma.Web\Pharma.Web.csproj">
       <Project>{FACFA556-8C59-4C48-9AF2-43746CB15BE4}</Project>
       <Name>Pharma.Web</Name>
