--- a/Pharma.Model/Pharma.Model.csproj
+++ b/Pharma.Model/Pharma.Model.csproj
@@ -51,12 +51,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\Auditable.cs" />
+    <Compile Include="Models\DeliveryNote.cs" />
+    <Compile Include="Models\DeliveryNoteItem.cs" />
+    <Compile Include="Models\Footer.cs" />
+    <Compile Include="Models\Menu.cs" />
+    <Compile Include="Models\MenuGroup.cs" />
+    <Compile Include="Models\Page.cs" />
+    <Compile Include="Models\Post.cs" />
+    <Compile Include="Models\PostCategory.cs" />
+    <Compile Include="Models\PostTag.cs" />
+    <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\ProductCategory.cs" />
+    <Compile Include="Models\ProductMapping.cs" />
+    <Compile Include="Models\ProductTag.cs" />
+    <Compile Include="Models\ReceiptNote.cs" />
+    <Compile Include="Models\ReceiptNoteItem.cs" />
+    <Compile Include="Models\Slide.cs" />
+    <Compile Include="Models\Store.cs" />
+    <Compile Include="Models\StoreRole.cs" />
+    <Compile Include="Models\Subject.cs" />
+    <Compile Include="Models\SupportOnline.cs" />
+    <Compile Include="Models\SystemConfig.cs" />
+    <Compile Include="Models\Tag.cs" />
+    <Compile Include="Models\Unit.cs" />
+    <Compile Include="Models\VisitorStatistic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
