Add ErrorTable for Log Error Add PostCategoryTrontroller for api Update Pharma.Web Project

--- a/Pharma.Data/Pharma.Data.csproj
+++ b/Pharma.Data/Pharma.Data.csproj
@@ -62,11 +62,16 @@
     <Compile Include="Migrations\202304120752135_InitialDB.designer.cs">
       <DependentUpon>202304120752135_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202304171455165_AddErrorTable.cs" />
+    <Compile Include="Migrations\202304171455165_AddErrorTable.designer.cs">
+      <DependentUpon>202304171455165_AddErrorTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PharmaDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DeliveryNoteItemRepository.cs" />
     <Compile Include="Repositories\DeliveryNoteRepository.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -107,6 +112,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202304120752135_InitialDB.resx">
       <DependentUpon>202304120752135_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304171455165_AddErrorTable.resx">
+      <DependentUpon>202304171455165_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
