--- a/Pharma.Model/Pharma.Model.csproj
+++ b/Pharma.Model/Pharma.Model.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Abstract\Auditable.cs" />
     <Compile Include="Models\DeliveryNote.cs" />
     <Compile Include="Models\DeliveryNoteItem.cs" />
+    <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Footer.cs" />
     <Compile Include="Models\Menu.cs" />
     <Compile Include="Models\MenuGroup.cs" />
