--- a/Pharma.Web/Pharma.Web.csproj
+++ b/Pharma.Web/Pharma.Web.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props')" />
   <Import Project="..\packages\EntityFramework.6.4.4\build\EntityFramework.props" Condition="Exists('..\packages\EntityFramework.6.4.4\build\EntityFramework.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.2.0.1\build\net46\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -27,6 +28,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <TypeScriptToolsVersion>4.3</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -324,6 +326,8 @@
     <Content Include="Assets\admin\libs\angularjs\angular-csp.min.css" />
     <Content Include="Assets\admin\libs\angularjs\angular.js" />
     <Content Include="Assets\admin\libs\angularjs\angular.min.js" />
+    <Content Include="Assets\admin\libs\bootbox\bootbox.js\bootbox.js" />
+    <Content Include="Assets\admin\libs\bootbox\bootbox.js\bootbox.min.js" />
     <Content Include="Assets\admin\libs\bootstrap\css\bootstrap-grid.css" />
     <Content Include="Assets\admin\libs\bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="Assets\admin\libs\bootstrap\css\bootstrap-grid.rtl.css" />
@@ -385,6 +389,25 @@
     <Content Include="Assets\admin\libs\jquery\jquery.min.js" />
     <Content Include="Assets\admin\libs\jquery\jquery.slim.js" />
     <Content Include="Assets\admin\libs\jquery\jquery.slim.min.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\bootbox.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\dist\bootbox.all.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\dist\bootbox.all.min.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\dist\bootbox.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\dist\bootbox.locales.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\dist\bootbox.locales.min.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\dist\bootbox.min.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\dist\ngBootbox.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\dist\ngBootbox.min.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-1\app.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-1\custom-dialog.tpl.html" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-1\index.html" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-2\app.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-2\index.html" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-2\main.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\example-2\require.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\examples\index.html" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\gulpfile.js" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\ngBootbox.js" />
     <Content Include="Assets\admin\libs\toastr\toastr.js\toastr.css" />
     <Content Include="Assets\admin\libs\toastr\toastr.js\toastr.min.css" />
     <Content Include="Assets\admin\libs\toastr\toastr.js\toastr.min.js" />
@@ -554,6 +577,15 @@
     <Content Include="Assets\admin\libs\fontawesome\font-awesome\webfonts\fa-v4compatibility.ttf" />
     <Content Include="Assets\admin\libs\fontawesome\font-awesome\webfonts\fa-v4compatibility.woff2" />
     <Content Include="Assets\admin\libs\toastr\toastr.js\toastr.js.map" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\CHANGELOG.md" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\LICENSE.md" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\package.json" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\bootbox\README.md" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\.npmignore" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\bower.json" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\package.json" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\README.md" />
+    <Content Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\tsd.json" />
     <None Include="packages.config" />
     <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
@@ -575,11 +607,20 @@
       <Name>Pharma.Service</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\typings\angularjs\angular.d.ts" />
+    <TypeScriptCompile Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\typings\jquery\jquery.d.ts" />
+    <TypeScriptCompile Include="Assets\admin\libs\ngBootbox\node_modules\ngbootbox\typings\tsd.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
