--- a/Pharma.Web/Pharma.Web.csproj
+++ b/Pharma.Web/Pharma.Web.csproj
@@ -207,10 +207,12 @@
     <Compile Include="Api\FooterController.cs" />
     <Compile Include="Api\HomeController.cs" />
     <Compile Include="Api\PostCategoryController.cs" />
+    <Compile Include="Api\PostController.cs" />
     <Compile Include="Api\ProductCategoryController.cs" />
     <Compile Include="Api\ProductController.cs" />
     <Compile Include="Api\StoreController.cs" />
     <Compile Include="Api\StoreRoleController.cs" />
+    <Compile Include="Api\SubjectController.cs" />
     <Compile Include="Api\UnitController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
@@ -261,6 +263,20 @@
     <Content Include="app\components\home\rootController.js" />
     <Content Include="app\components\login\loginController.js" />
     <Content Include="app\components\login\loginView.html" />
+    <Content Include="app\components\posts\postAddController.js" />
+    <Content Include="app\components\posts\postAddView.html" />
+    <Content Include="app\components\posts\postEditController.js" />
+    <Content Include="app\components\posts\postEditView.html" />
+    <Content Include="app\components\posts\postListController.js" />
+    <Content Include="app\components\posts\postListView.html" />
+    <Content Include="app\components\posts\posts.module.js" />
+    <Content Include="app\components\post_categories\postCategories.module.js" />
+    <Content Include="app\components\post_categories\postCategoryAddController.js" />
+    <Content Include="app\components\post_categories\postCategoryAddView.html" />
+    <Content Include="app\components\post_categories\postCategoryEditController.js" />
+    <Content Include="app\components\post_categories\postCategoryEditView.html" />
+    <Content Include="app\components\post_categories\postCategoryListController.js" />
+    <Content Include="app\components\post_categories\postCategoryListView.html" />
     <Content Include="app\components\products\products.module.js" />
     <Content Include="app\components\products\productAddController.js" />
     <Content Include="app\components\products\productAddView.html" />
@@ -275,6 +291,13 @@
     <Content Include="app\components\product_categories\productCategoryEditView.html" />
     <Content Include="app\components\product_categories\productCategoryListController.js" />
     <Content Include="app\components\product_categories\productCategoryListView.html" />
+    <Content Include="app\components\subjects\subjectAddController.js" />
+    <Content Include="app\components\subjects\subjectAddView.html" />
+    <Content Include="app\components\subjects\subjectEditController.js" />
+    <Content Include="app\components\subjects\subjectEditView.html" />
+    <Content Include="app\components\subjects\subjectListController.js" />
+    <Content Include="app\components\subjects\subjectListView.html" />
+    <Content Include="app\components\subjects\subjects.mudule.js" />
     <Content Include="app\components\units\unitAddController.js" />
     <Content Include="app\components\units\unitAddView.html" />
     <Content Include="app\components\units\unitEditController.js" />
