--- a/Pharma.Service/Pharma.Service.csproj
+++ b/Pharma.Service/Pharma.Service.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoreRoleService.cs" />
     <Compile Include="StoreService.cs" />
+    <Compile Include="SubjectService.cs" />
     <Compile Include="UnitService.cs" />
   </ItemGroup>
   <ItemGroup>
