--- a/Pharma.Data/Pharma.Data.csproj
+++ b/Pharma.Data/Pharma.Data.csproj
@@ -164,9 +164,21 @@
     <Compile Include="Migrations\202306100345187_NoteBook.designer.cs">
       <DependentUpon>202306100345187_NoteBook.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202306120708192_RenameTableIdentity.cs" />
+    <Compile Include="Migrations\202306120708192_RenameTableIdentity.designer.cs">
+      <DependentUpon>202306120708192_RenameTableIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202306120732216_AddGroupUser.cs" />
+    <Compile Include="Migrations\202306120732216_AddGroupUser.designer.cs">
+      <DependentUpon>202306120732216_AddGroupUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PharmaDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ApplicationUserGroupRepository.cs" />
+    <Compile Include="Repositories\ApplicationRoleRepository.cs" />
+    <Compile Include="Repositories\ApplicationRoleGroupRepository.cs" />
+    <Compile Include="Repositories\ApplicationGroupRepository.cs" />
     <Compile Include="Repositories\ContactDetailRepository.cs" />
     <Compile Include="Repositories\DeliveryNoteItemRepository.cs" />
     <Compile Include="Repositories\DeliveryNoteRepository.cs" />
@@ -285,6 +297,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202306100345187_NoteBook.resx">
       <DependentUpon>202306100345187_NoteBook.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306120708192_RenameTableIdentity.resx">
+      <DependentUpon>202306120708192_RenameTableIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202306120732216_AddGroupUser.resx">
+      <DependentUpon>202306120732216_AddGroupUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
