--- a/Pharma.Model/Pharma.Model.csproj
+++ b/Pharma.Model/Pharma.Model.csproj
@@ -58,7 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\Auditable.cs" />
+    <Compile Include="Models\ApplicationGroup.cs" />
+    <Compile Include="Models\ApplicationRole.cs" />
+    <Compile Include="Models\ApplicationRoleGroup.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="Models\ApplicationUserGroup.cs" />
     <Compile Include="Models\ContactDetail.cs" />
     <Compile Include="Models\DeliveryNote.cs" />
     <Compile Include="Models\DeliveryNoteItem.cs" />
